# SIDPod-SDCard

./: .code-workspace  .gitattributes  .gitignore  CMakeLists.txt  README.md  SIDPod.fzz
include/: System.h  UI.h  platform_config.h  sidpod_bmp.h
include/FatFs_SPI/ff15/source/: ffconf.h
include/FatFs_SPI/sd_driver/: sd_card.c  sd_spi.c  spi.c
include/FatFs_SPI/src/: glue.c
include/io/: ff_util.h
scripts/: gdb.md  openocd.cfg  sourcemefirst.sh  uartoutput.md
src/: PSIDCatalog.cpp  System.cpp  UI.cpp  hw_config.c  main.cpp
src/audio/: SIDPlayer.cpp  sid.c
src/io/: ff_util.c
